--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   "profiles": {
     "https": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
